turtle.output
Terminale, die in Grammatik unbenutzt sind

   SIN
   ELSE


Zustand 22 Konflikte: 14 Reduziere/Reduziere
Zustand 123 Konflikte: 14 Schiebe/Reduziere


Grammatik

    0 $accept: program $end

    1 program: head decllist stmtlist tail

    2 head: %empty

    3 tail: %empty

    4 stmtlist: %empty
    5         | stmtlist stmt

    6 decllist: %empty
    7         | decllist decl

    8 decl: VAR ID SEMICOLON
    9     | VAR ID ASSIGN expr SEMICOLON

   10 $@1: %empty

   11 decl: PROC ID $@1 OPEN paramlist CLOSE BEG decllist stmtlist END

   12 paramlist: %empty
   13          | params

   14 params: ID
   15       | ID KOMMA params

   16 stmt: ID OPEN arglist CLOSE SEMICOLON

   17 arglist: %empty
   18        | args

   19 args: expr
   20     | args KOMMA expr

   21 stmt: error SEMICOLON
   22     | BEG stmtlist error END

   23 $@2: %empty

   24 $@3: %empty

   25 stmt: WHILE $@2 bool $@3 DO stmt

   26 $@4: %empty

   27 stmt: BEG $@4 decllist stmtlist END

   28 $@5: %empty

   29 stmt: IF bool $@5 THEN decllist stmtlist
   30     | GO SEMICOLON
   31     | GO expr SEMICOLON
   32     | NORTH SEMICOLON
   33     | SOUTH SEMICOLON
   34     | WEST SEMICOLON
   35     | EAST SEMICOLON
   36     | TURNLEFT SEMICOLON
   37     | TURNRIGHT SEMICOLON
   38     | TURN expr SEMICOLON
   39     | THICKNESS NUMBER SEMICOLON
   40     | ID ASSIGN expr SEMICOLON

   41 bool: bool OR bool1
   42     | bool1

   43 bool1: bool1 AND bool2
   44      | bool2

   45 bool2: NOT bool3
   46      | bool3

   47 bool3: expr LESS expr
   48      | expr GREATER expr
   49      | expr EQUAL expr
   50      | TRUE
   51      | FALSE
   52      | OPEN bool CLOSE

   53 expr: prod
   54     | expr PLUS prod
   55     | expr MINUS prod

   56 prod: exp
   57     | prod TIMES exp

   58 exp: atomic
   59    | atomic EXP exp

   60 atomic: NUMBER
   61       | FLOAT
   62       | OPEN expr CLOSE
   63       | OPEN error CLOSE
   64       | EULER
   65       | ID


Terminale und die Regeln, in denen sie verwendet werden

$end (0) 0
error (256) 21 22 63
GO (258) 30 31
SEMICOLON (259) 8 9 16 21 30 31 32 33 34 35 36 37 38 39 40
NORTH (260) 32
SOUTH (261) 33
WEST (262) 34
EAST (263) 35
TURNLEFT (264) 36
TURNRIGHT (265) 37
TURN (266) 38
THICKNESS (267) 39
NUMBER (268) 39 60
FLOAT (269) 61
ID (270) 8 9 11 14 15 16 40 65
PLUS (271) 54
MINUS (272) 55
TIMES (273) 57
OPEN (274) 11 16 52 62 63
CLOSE (275) 11 16 52 62 63
EULER (276) 64
EXP (277) 59
SIN (278)
ASSIGN (279) 9 40
VAR (280) 8 9
BEG (281) 11 22 27
END (282) 11 22 27
DO (283) 25
WHILE (284) 25
LESS (285) 47
GREATER (286) 48
EQUAL (287) 49
TRUE (288) 50
FALSE (289) 51
AND (290) 43
NOT (291) 45
OR (292) 41
IF (293) 29
THEN (294) 29
ELSE (295)
PROC (296) 11
KOMMA (297) 15 20


Nicht-Terminal und die Regeln, in denen sie verwendet werden

$accept (43)
    auf der linken Seite: 0
program (44)
    auf der linken Seite: 1, auf der rechten Seite: 0
head (45)
    auf der linken Seite: 2, auf der rechten Seite: 1
tail (46)
    auf der linken Seite: 3, auf der rechten Seite: 1
stmtlist (47)
    auf der linken Seite: 4 5, auf der rechten Seite: 1 5 11 22 27
    29
decllist (48)
    auf der linken Seite: 6 7, auf der rechten Seite: 1 7 11 27 29
decl (49)
    auf der linken Seite: 8 9 11, auf der rechten Seite: 7
$@1 (50)
    auf der linken Seite: 10, auf der rechten Seite: 11
paramlist (51)
    auf der linken Seite: 12 13, auf der rechten Seite: 11
params (52)
    auf der linken Seite: 14 15, auf der rechten Seite: 13 15
stmt (53)
    auf der linken Seite: 16 21 22 25 27 29 30 31 32 33 34 35 36 37
    38 39 40, auf der rechten Seite: 5 25
arglist (54)
    auf der linken Seite: 17 18, auf der rechten Seite: 16
args (55)
    auf der linken Seite: 19 20, auf der rechten Seite: 18 20
$@2 (56)
    auf der linken Seite: 23, auf der rechten Seite: 25
$@3 (57)
    auf der linken Seite: 24, auf der rechten Seite: 25
$@4 (58)
    auf der linken Seite: 26, auf der rechten Seite: 27
$@5 (59)
    auf der linken Seite: 28, auf der rechten Seite: 29
bool (60)
    auf der linken Seite: 41 42, auf der rechten Seite: 25 29 41 52
bool1 (61)
    auf der linken Seite: 43 44, auf der rechten Seite: 41 42 43
bool2 (62)
    auf der linken Seite: 45 46, auf der rechten Seite: 43 44
bool3 (63)
    auf der linken Seite: 47 48 49 50 51 52, auf der rechten Seite:
    45 46
expr (64)
    auf der linken Seite: 53 54 55, auf der rechten Seite: 9 19 20
    31 38 40 47 48 49 54 55 62
prod (65)
    auf der linken Seite: 56 57, auf der rechten Seite: 53 54 55 57
exp (66)
    auf der linken Seite: 58 59, auf der rechten Seite: 56 57 59
atomic (67)
    auf der linken Seite: 60 61 62 63 64 65, auf der rechten Seite:
    58 59


Zustand 0

    0 $accept: . program $end

    $default  reduziere mit Regel 2 (head)

    program  gehe zu Zustand 1 über
    head     gehe zu Zustand 2 über


Zustand 1

    0 $accept: program . $end

    $end  schiebe und gehe zu Zustand 3 über


Zustand 2

    1 program: head . decllist stmtlist tail

    $default  reduziere mit Regel 6 (decllist)

    decllist  gehe zu Zustand 4 über


Zustand 3

    0 $accept: program $end .

    $default  annehmen


Zustand 4

    1 program: head decllist . stmtlist tail
    7 decllist: decllist . decl

    VAR   schiebe und gehe zu Zustand 5 über
    PROC  schiebe und gehe zu Zustand 6 über

    $default  reduziere mit Regel 4 (stmtlist)

    stmtlist  gehe zu Zustand 7 über
    decl      gehe zu Zustand 8 über


Zustand 5

    8 decl: VAR . ID SEMICOLON
    9     | VAR . ID ASSIGN expr SEMICOLON

    ID  schiebe und gehe zu Zustand 9 über


Zustand 6

   11 decl: PROC . ID $@1 OPEN paramlist CLOSE BEG decllist stmtlist END

    ID  schiebe und gehe zu Zustand 10 über


Zustand 7

    1 program: head decllist stmtlist . tail
    5 stmtlist: stmtlist . stmt

    error      schiebe und gehe zu Zustand 11 über
    GO         schiebe und gehe zu Zustand 12 über
    NORTH      schiebe und gehe zu Zustand 13 über
    SOUTH      schiebe und gehe zu Zustand 14 über
    WEST       schiebe und gehe zu Zustand 15 über
    EAST       schiebe und gehe zu Zustand 16 über
    TURNLEFT   schiebe und gehe zu Zustand 17 über
    TURNRIGHT  schiebe und gehe zu Zustand 18 über
    TURN       schiebe und gehe zu Zustand 19 über
    THICKNESS  schiebe und gehe zu Zustand 20 über
    ID         schiebe und gehe zu Zustand 21 über
    BEG        schiebe und gehe zu Zustand 22 über
    WHILE      schiebe und gehe zu Zustand 23 über
    IF         schiebe und gehe zu Zustand 24 über

    $end  reduziere mit Regel 3 (tail)

    tail  gehe zu Zustand 25 über
    stmt  gehe zu Zustand 26 über


Zustand 8

    7 decllist: decllist decl .

    $default  reduziere mit Regel 7 (decllist)


Zustand 9

    8 decl: VAR ID . SEMICOLON
    9     | VAR ID . ASSIGN expr SEMICOLON

    SEMICOLON  schiebe und gehe zu Zustand 27 über
    ASSIGN     schiebe und gehe zu Zustand 28 über


Zustand 10

   11 decl: PROC ID . $@1 OPEN paramlist CLOSE BEG decllist stmtlist END

    $default  reduziere mit Regel 10 ($@1)

    $@1  gehe zu Zustand 29 über


Zustand 11

   21 stmt: error . SEMICOLON

    SEMICOLON  schiebe und gehe zu Zustand 30 über


Zustand 12

   30 stmt: GO . SEMICOLON
   31     | GO . expr SEMICOLON

    SEMICOLON  schiebe und gehe zu Zustand 31 über
    NUMBER     schiebe und gehe zu Zustand 32 über
    FLOAT      schiebe und gehe zu Zustand 33 über
    ID         schiebe und gehe zu Zustand 34 über
    OPEN       schiebe und gehe zu Zustand 35 über
    EULER      schiebe und gehe zu Zustand 36 über

    expr    gehe zu Zustand 37 über
    prod    gehe zu Zustand 38 über
    exp     gehe zu Zustand 39 über
    atomic  gehe zu Zustand 40 über


Zustand 13

   32 stmt: NORTH . SEMICOLON

    SEMICOLON  schiebe und gehe zu Zustand 41 über


Zustand 14

   33 stmt: SOUTH . SEMICOLON

    SEMICOLON  schiebe und gehe zu Zustand 42 über


Zustand 15

   34 stmt: WEST . SEMICOLON

    SEMICOLON  schiebe und gehe zu Zustand 43 über


Zustand 16

   35 stmt: EAST . SEMICOLON

    SEMICOLON  schiebe und gehe zu Zustand 44 über


Zustand 17

   36 stmt: TURNLEFT . SEMICOLON

    SEMICOLON  schiebe und gehe zu Zustand 45 über


Zustand 18

   37 stmt: TURNRIGHT . SEMICOLON

    SEMICOLON  schiebe und gehe zu Zustand 46 über


Zustand 19

   38 stmt: TURN . expr SEMICOLON

    NUMBER  schiebe und gehe zu Zustand 32 über
    FLOAT   schiebe und gehe zu Zustand 33 über
    ID      schiebe und gehe zu Zustand 34 über
    OPEN    schiebe und gehe zu Zustand 35 über
    EULER   schiebe und gehe zu Zustand 36 über

    expr    gehe zu Zustand 47 über
    prod    gehe zu Zustand 38 über
    exp     gehe zu Zustand 39 über
    atomic  gehe zu Zustand 40 über


Zustand 20

   39 stmt: THICKNESS . NUMBER SEMICOLON

    NUMBER  schiebe und gehe zu Zustand 48 über


Zustand 21

   16 stmt: ID . OPEN arglist CLOSE SEMICOLON
   40     | ID . ASSIGN expr SEMICOLON

    OPEN    schiebe und gehe zu Zustand 49 über
    ASSIGN  schiebe und gehe zu Zustand 50 über


Zustand 22

   22 stmt: BEG . stmtlist error END
   27     | BEG . $@4 decllist stmtlist END

    error      reduziere mit Regel 4 (stmtlist)
    error      [reduziere mit Regel 26 ($@4)]
    GO         reduziere mit Regel 4 (stmtlist)
    GO         [reduziere mit Regel 26 ($@4)]
    NORTH      reduziere mit Regel 4 (stmtlist)
    NORTH      [reduziere mit Regel 26 ($@4)]
    SOUTH      reduziere mit Regel 4 (stmtlist)
    SOUTH      [reduziere mit Regel 26 ($@4)]
    WEST       reduziere mit Regel 4 (stmtlist)
    WEST       [reduziere mit Regel 26 ($@4)]
    EAST       reduziere mit Regel 4 (stmtlist)
    EAST       [reduziere mit Regel 26 ($@4)]
    TURNLEFT   reduziere mit Regel 4 (stmtlist)
    TURNLEFT   [reduziere mit Regel 26 ($@4)]
    TURNRIGHT  reduziere mit Regel 4 (stmtlist)
    TURNRIGHT  [reduziere mit Regel 26 ($@4)]
    TURN       reduziere mit Regel 4 (stmtlist)
    TURN       [reduziere mit Regel 26 ($@4)]
    THICKNESS  reduziere mit Regel 4 (stmtlist)
    THICKNESS  [reduziere mit Regel 26 ($@4)]
    ID         reduziere mit Regel 4 (stmtlist)
    ID         [reduziere mit Regel 26 ($@4)]
    VAR        reduziere mit Regel 26 ($@4)
    BEG        reduziere mit Regel 4 (stmtlist)
    BEG        [reduziere mit Regel 26 ($@4)]
    END        reduziere mit Regel 26 ($@4)
    WHILE      reduziere mit Regel 4 (stmtlist)
    WHILE      [reduziere mit Regel 26 ($@4)]
    IF         reduziere mit Regel 4 (stmtlist)
    IF         [reduziere mit Regel 26 ($@4)]
    PROC       reduziere mit Regel 26 ($@4)
    $default   reduziere mit Regel 4 (stmtlist)

    stmtlist  gehe zu Zustand 51 über
    $@4       gehe zu Zustand 52 über


Zustand 23

   25 stmt: WHILE . $@2 bool $@3 DO stmt

    $default  reduziere mit Regel 23 ($@2)

    $@2  gehe zu Zustand 53 über


Zustand 24

   29 stmt: IF . bool $@5 THEN decllist stmtlist

    NUMBER  schiebe und gehe zu Zustand 32 über
    FLOAT   schiebe und gehe zu Zustand 33 über
    ID      schiebe und gehe zu Zustand 34 über
    OPEN    schiebe und gehe zu Zustand 54 über
    EULER   schiebe und gehe zu Zustand 36 über
    TRUE    schiebe und gehe zu Zustand 55 über
    FALSE   schiebe und gehe zu Zustand 56 über
    NOT     schiebe und gehe zu Zustand 57 über

    bool    gehe zu Zustand 58 über
    bool1   gehe zu Zustand 59 über
    bool2   gehe zu Zustand 60 über
    bool3   gehe zu Zustand 61 über
    expr    gehe zu Zustand 62 über
    prod    gehe zu Zustand 38 über
    exp     gehe zu Zustand 39 über
    atomic  gehe zu Zustand 40 über


Zustand 25

    1 program: head decllist stmtlist tail .

    $default  reduziere mit Regel 1 (program)


Zustand 26

    5 stmtlist: stmtlist stmt .

    $default  reduziere mit Regel 5 (stmtlist)


Zustand 27

    8 decl: VAR ID SEMICOLON .

    $default  reduziere mit Regel 8 (decl)


Zustand 28

    9 decl: VAR ID ASSIGN . expr SEMICOLON

    NUMBER  schiebe und gehe zu Zustand 32 über
    FLOAT   schiebe und gehe zu Zustand 33 über
    ID      schiebe und gehe zu Zustand 34 über
    OPEN    schiebe und gehe zu Zustand 35 über
    EULER   schiebe und gehe zu Zustand 36 über

    expr    gehe zu Zustand 63 über
    prod    gehe zu Zustand 38 über
    exp     gehe zu Zustand 39 über
    atomic  gehe zu Zustand 40 über


Zustand 29

   11 decl: PROC ID $@1 . OPEN paramlist CLOSE BEG decllist stmtlist END

    OPEN  schiebe und gehe zu Zustand 64 über


Zustand 30

   21 stmt: error SEMICOLON .

    $default  reduziere mit Regel 21 (stmt)


Zustand 31

   30 stmt: GO SEMICOLON .

    $default  reduziere mit Regel 30 (stmt)


Zustand 32

   60 atomic: NUMBER .

    $default  reduziere mit Regel 60 (atomic)


Zustand 33

   61 atomic: FLOAT .

    $default  reduziere mit Regel 61 (atomic)


Zustand 34

   65 atomic: ID .

    $default  reduziere mit Regel 65 (atomic)


Zustand 35

   62 atomic: OPEN . expr CLOSE
   63       | OPEN . error CLOSE

    error   schiebe und gehe zu Zustand 65 über
    NUMBER  schiebe und gehe zu Zustand 32 über
    FLOAT   schiebe und gehe zu Zustand 33 über
    ID      schiebe und gehe zu Zustand 34 über
    OPEN    schiebe und gehe zu Zustand 35 über
    EULER   schiebe und gehe zu Zustand 36 über

    expr    gehe zu Zustand 66 über
    prod    gehe zu Zustand 38 über
    exp     gehe zu Zustand 39 über
    atomic  gehe zu Zustand 40 über


Zustand 36

   64 atomic: EULER .

    $default  reduziere mit Regel 64 (atomic)


Zustand 37

   31 stmt: GO expr . SEMICOLON
   54 expr: expr . PLUS prod
   55     | expr . MINUS prod

    SEMICOLON  schiebe und gehe zu Zustand 67 über
    PLUS       schiebe und gehe zu Zustand 68 über
    MINUS      schiebe und gehe zu Zustand 69 über


Zustand 38

   53 expr: prod .
   57 prod: prod . TIMES exp

    TIMES  schiebe und gehe zu Zustand 70 über

    $default  reduziere mit Regel 53 (expr)


Zustand 39

   56 prod: exp .

    $default  reduziere mit Regel 56 (prod)


Zustand 40

   58 exp: atomic .
   59    | atomic . EXP exp

    EXP  schiebe und gehe zu Zustand 71 über

    $default  reduziere mit Regel 58 (exp)


Zustand 41

   32 stmt: NORTH SEMICOLON .

    $default  reduziere mit Regel 32 (stmt)


Zustand 42

   33 stmt: SOUTH SEMICOLON .

    $default  reduziere mit Regel 33 (stmt)


Zustand 43

   34 stmt: WEST SEMICOLON .

    $default  reduziere mit Regel 34 (stmt)


Zustand 44

   35 stmt: EAST SEMICOLON .

    $default  reduziere mit Regel 35 (stmt)


Zustand 45

   36 stmt: TURNLEFT SEMICOLON .

    $default  reduziere mit Regel 36 (stmt)


Zustand 46

   37 stmt: TURNRIGHT SEMICOLON .

    $default  reduziere mit Regel 37 (stmt)


Zustand 47

   38 stmt: TURN expr . SEMICOLON
   54 expr: expr . PLUS prod
   55     | expr . MINUS prod

    SEMICOLON  schiebe und gehe zu Zustand 72 über
    PLUS       schiebe und gehe zu Zustand 68 über
    MINUS      schiebe und gehe zu Zustand 69 über


Zustand 48

   39 stmt: THICKNESS NUMBER . SEMICOLON

    SEMICOLON  schiebe und gehe zu Zustand 73 über


Zustand 49

   16 stmt: ID OPEN . arglist CLOSE SEMICOLON

    NUMBER  schiebe und gehe zu Zustand 32 über
    FLOAT   schiebe und gehe zu Zustand 33 über
    ID      schiebe und gehe zu Zustand 34 über
    OPEN    schiebe und gehe zu Zustand 35 über
    EULER   schiebe und gehe zu Zustand 36 über

    $default  reduziere mit Regel 17 (arglist)

    arglist  gehe zu Zustand 74 über
    args     gehe zu Zustand 75 über
    expr     gehe zu Zustand 76 über
    prod     gehe zu Zustand 38 über
    exp      gehe zu Zustand 39 über
    atomic   gehe zu Zustand 40 über


Zustand 50

   40 stmt: ID ASSIGN . expr SEMICOLON

    NUMBER  schiebe und gehe zu Zustand 32 über
    FLOAT   schiebe und gehe zu Zustand 33 über
    ID      schiebe und gehe zu Zustand 34 über
    OPEN    schiebe und gehe zu Zustand 35 über
    EULER   schiebe und gehe zu Zustand 36 über

    expr    gehe zu Zustand 77 über
    prod    gehe zu Zustand 38 über
    exp     gehe zu Zustand 39 über
    atomic  gehe zu Zustand 40 über


Zustand 51

    5 stmtlist: stmtlist . stmt
   22 stmt: BEG stmtlist . error END

    error      schiebe und gehe zu Zustand 78 über
    GO         schiebe und gehe zu Zustand 12 über
    NORTH      schiebe und gehe zu Zustand 13 über
    SOUTH      schiebe und gehe zu Zustand 14 über
    WEST       schiebe und gehe zu Zustand 15 über
    EAST       schiebe und gehe zu Zustand 16 über
    TURNLEFT   schiebe und gehe zu Zustand 17 über
    TURNRIGHT  schiebe und gehe zu Zustand 18 über
    TURN       schiebe und gehe zu Zustand 19 über
    THICKNESS  schiebe und gehe zu Zustand 20 über
    ID         schiebe und gehe zu Zustand 21 über
    BEG        schiebe und gehe zu Zustand 22 über
    WHILE      schiebe und gehe zu Zustand 23 über
    IF         schiebe und gehe zu Zustand 24 über

    stmt  gehe zu Zustand 26 über


Zustand 52

   27 stmt: BEG $@4 . decllist stmtlist END

    $default  reduziere mit Regel 6 (decllist)

    decllist  gehe zu Zustand 79 über


Zustand 53

   25 stmt: WHILE $@2 . bool $@3 DO stmt

    NUMBER  schiebe und gehe zu Zustand 32 über
    FLOAT   schiebe und gehe zu Zustand 33 über
    ID      schiebe und gehe zu Zustand 34 über
    OPEN    schiebe und gehe zu Zustand 54 über
    EULER   schiebe und gehe zu Zustand 36 über
    TRUE    schiebe und gehe zu Zustand 55 über
    FALSE   schiebe und gehe zu Zustand 56 über
    NOT     schiebe und gehe zu Zustand 57 über

    bool    gehe zu Zustand 80 über
    bool1   gehe zu Zustand 59 über
    bool2   gehe zu Zustand 60 über
    bool3   gehe zu Zustand 61 über
    expr    gehe zu Zustand 62 über
    prod    gehe zu Zustand 38 über
    exp     gehe zu Zustand 39 über
    atomic  gehe zu Zustand 40 über


Zustand 54

   52 bool3: OPEN . bool CLOSE
   62 atomic: OPEN . expr CLOSE
   63       | OPEN . error CLOSE

    error   schiebe und gehe zu Zustand 65 über
    NUMBER  schiebe und gehe zu Zustand 32 über
    FLOAT   schiebe und gehe zu Zustand 33 über
    ID      schiebe und gehe zu Zustand 34 über
    OPEN    schiebe und gehe zu Zustand 54 über
    EULER   schiebe und gehe zu Zustand 36 über
    TRUE    schiebe und gehe zu Zustand 55 über
    FALSE   schiebe und gehe zu Zustand 56 über
    NOT     schiebe und gehe zu Zustand 57 über

    bool    gehe zu Zustand 81 über
    bool1   gehe zu Zustand 59 über
    bool2   gehe zu Zustand 60 über
    bool3   gehe zu Zustand 61 über
    expr    gehe zu Zustand 82 über
    prod    gehe zu Zustand 38 über
    exp     gehe zu Zustand 39 über
    atomic  gehe zu Zustand 40 über


Zustand 55

   50 bool3: TRUE .

    $default  reduziere mit Regel 50 (bool3)


Zustand 56

   51 bool3: FALSE .

    $default  reduziere mit Regel 51 (bool3)


Zustand 57

   45 bool2: NOT . bool3

    NUMBER  schiebe und gehe zu Zustand 32 über
    FLOAT   schiebe und gehe zu Zustand 33 über
    ID      schiebe und gehe zu Zustand 34 über
    OPEN    schiebe und gehe zu Zustand 54 über
    EULER   schiebe und gehe zu Zustand 36 über
    TRUE    schiebe und gehe zu Zustand 55 über
    FALSE   schiebe und gehe zu Zustand 56 über

    bool3   gehe zu Zustand 83 über
    expr    gehe zu Zustand 62 über
    prod    gehe zu Zustand 38 über
    exp     gehe zu Zustand 39 über
    atomic  gehe zu Zustand 40 über


Zustand 58

   29 stmt: IF bool . $@5 THEN decllist stmtlist
   41 bool: bool . OR bool1

    OR  schiebe und gehe zu Zustand 84 über

    $default  reduziere mit Regel 28 ($@5)

    $@5  gehe zu Zustand 85 über


Zustand 59

   42 bool: bool1 .
   43 bool1: bool1 . AND bool2

    AND  schiebe und gehe zu Zustand 86 über

    $default  reduziere mit Regel 42 (bool)


Zustand 60

   44 bool1: bool2 .

    $default  reduziere mit Regel 44 (bool1)


Zustand 61

   46 bool2: bool3 .

    $default  reduziere mit Regel 46 (bool2)


Zustand 62

   47 bool3: expr . LESS expr
   48      | expr . GREATER expr
   49      | expr . EQUAL expr
   54 expr: expr . PLUS prod
   55     | expr . MINUS prod

    PLUS     schiebe und gehe zu Zustand 68 über
    MINUS    schiebe und gehe zu Zustand 69 über
    LESS     schiebe und gehe zu Zustand 87 über
    GREATER  schiebe und gehe zu Zustand 88 über
    EQUAL    schiebe und gehe zu Zustand 89 über


Zustand 63

    9 decl: VAR ID ASSIGN expr . SEMICOLON
   54 expr: expr . PLUS prod
   55     | expr . MINUS prod

    SEMICOLON  schiebe und gehe zu Zustand 90 über
    PLUS       schiebe und gehe zu Zustand 68 über
    MINUS      schiebe und gehe zu Zustand 69 über


Zustand 64

   11 decl: PROC ID $@1 OPEN . paramlist CLOSE BEG decllist stmtlist END

    ID  schiebe und gehe zu Zustand 91 über

    $default  reduziere mit Regel 12 (paramlist)

    paramlist  gehe zu Zustand 92 über
    params     gehe zu Zustand 93 über


Zustand 65

   63 atomic: OPEN error . CLOSE

    CLOSE  schiebe und gehe zu Zustand 94 über


Zustand 66

   54 expr: expr . PLUS prod
   55     | expr . MINUS prod
   62 atomic: OPEN expr . CLOSE

    PLUS   schiebe und gehe zu Zustand 68 über
    MINUS  schiebe und gehe zu Zustand 69 über
    CLOSE  schiebe und gehe zu Zustand 95 über


Zustand 67

   31 stmt: GO expr SEMICOLON .

    $default  reduziere mit Regel 31 (stmt)


Zustand 68

   54 expr: expr PLUS . prod

    NUMBER  schiebe und gehe zu Zustand 32 über
    FLOAT   schiebe und gehe zu Zustand 33 über
    ID      schiebe und gehe zu Zustand 34 über
    OPEN    schiebe und gehe zu Zustand 35 über
    EULER   schiebe und gehe zu Zustand 36 über

    prod    gehe zu Zustand 96 über
    exp     gehe zu Zustand 39 über
    atomic  gehe zu Zustand 40 über


Zustand 69

   55 expr: expr MINUS . prod

    NUMBER  schiebe und gehe zu Zustand 32 über
    FLOAT   schiebe und gehe zu Zustand 33 über
    ID      schiebe und gehe zu Zustand 34 über
    OPEN    schiebe und gehe zu Zustand 35 über
    EULER   schiebe und gehe zu Zustand 36 über

    prod    gehe zu Zustand 97 über
    exp     gehe zu Zustand 39 über
    atomic  gehe zu Zustand 40 über


Zustand 70

   57 prod: prod TIMES . exp

    NUMBER  schiebe und gehe zu Zustand 32 über
    FLOAT   schiebe und gehe zu Zustand 33 über
    ID      schiebe und gehe zu Zustand 34 über
    OPEN    schiebe und gehe zu Zustand 35 über
    EULER   schiebe und gehe zu Zustand 36 über

    exp     gehe zu Zustand 98 über
    atomic  gehe zu Zustand 40 über


Zustand 71

   59 exp: atomic EXP . exp

    NUMBER  schiebe und gehe zu Zustand 32 über
    FLOAT   schiebe und gehe zu Zustand 33 über
    ID      schiebe und gehe zu Zustand 34 über
    OPEN    schiebe und gehe zu Zustand 35 über
    EULER   schiebe und gehe zu Zustand 36 über

    exp     gehe zu Zustand 99 über
    atomic  gehe zu Zustand 40 über


Zustand 72

   38 stmt: TURN expr SEMICOLON .

    $default  reduziere mit Regel 38 (stmt)


Zustand 73

   39 stmt: THICKNESS NUMBER SEMICOLON .

    $default  reduziere mit Regel 39 (stmt)


Zustand 74

   16 stmt: ID OPEN arglist . CLOSE SEMICOLON

    CLOSE  schiebe und gehe zu Zustand 100 über


Zustand 75

   18 arglist: args .
   20 args: args . KOMMA expr

    KOMMA  schiebe und gehe zu Zustand 101 über

    $default  reduziere mit Regel 18 (arglist)


Zustand 76

   19 args: expr .
   54 expr: expr . PLUS prod
   55     | expr . MINUS prod

    PLUS   schiebe und gehe zu Zustand 68 über
    MINUS  schiebe und gehe zu Zustand 69 über

    $default  reduziere mit Regel 19 (args)


Zustand 77

   40 stmt: ID ASSIGN expr . SEMICOLON
   54 expr: expr . PLUS prod
   55     | expr . MINUS prod

    SEMICOLON  schiebe und gehe zu Zustand 102 über
    PLUS       schiebe und gehe zu Zustand 68 über
    MINUS      schiebe und gehe zu Zustand 69 über


Zustand 78

   21 stmt: error . SEMICOLON
   22     | BEG stmtlist error . END

    SEMICOLON  schiebe und gehe zu Zustand 30 über
    END        schiebe und gehe zu Zustand 103 über


Zustand 79

    7 decllist: decllist . decl
   27 stmt: BEG $@4 decllist . stmtlist END

    VAR   schiebe und gehe zu Zustand 5 über
    PROC  schiebe und gehe zu Zustand 6 über

    $default  reduziere mit Regel 4 (stmtlist)

    stmtlist  gehe zu Zustand 104 über
    decl      gehe zu Zustand 8 über


Zustand 80
